# aedmi

./: .dockerignore  .edmirules.md  .env.example  .env.prod.example  .gitignore  CHECKPOINT.md  Descripcion.md  Dockerfile  Listado_Indicadores.md  README.md  app.py  check_localidades_db.py  clean_db_hotel.py  debug_year_mapping.py  docker-compose.prod.yml  docker-compose.yml  docker-compose_vps.yml  find_2032.py  fix_frontend.sh  listado-fuentes-datos.md  mock_localidades.sql  mock_ocotepec.sql  pyproject.toml  reproduce_lock.py  restore_monterrey_local_db.sql  test_etl_insert.py  test_etl_small.py  test_geo.py  test_inegi.py  test_loader.py  test_merida.py  tmp_debug_piramide_api.py
api/: main_prod.py  main_vps_local.py  pyproject.toml
api/core/: auth.py  config.py
api/routers/: auth.py  indicadores.py  infraestructura.py  mapa.py
api/schemas/: etl.py  indicador.py  mapa.py
db/: indicadores_adicionales.sql  init.sql  simple_fx.sql  update_fx.sql
deploy_dist/: docker-compose.prod.yml
deploy_dist/etl/: Dockerfile  _buscar_serie_inegi.py  main.py  pyproject.toml  run_all_modules_once.py  scheduler.py
deploy_dist/etl/core/: db.py  logger.py  models.py
deploy_dist/etl/sources/afac/: conexiones_aereas_merida.py  llegadas_pasajeros_monterrey.py  operaciones_aeroportuarias.py  vuelos_nacionales_internacionales_aiq_queretaro.py
deploy_dist/etl/sources/banxico/: client.py  inflacion.py  pib_trimestral.py
deploy_dist/etl/sources/conapo/: __init__.py  municipios_piramide_edad.py  municipios_poblacion.py  municipios_proyeccion.py  proyecciones_estatal.py
deploy_dist/etl/sources/inegi/: __init__.py  balanza_comercial.py  balanza_visitantes.py  client.py  estados_info.py  ocupacion_restaurantes_hoteles_yucatan.py  pea_queretaro.py  tasa_desocupacion_queretaro.py
deploy_dist/etl/sources/se/: __init__.py  anuncios_estatal.py  anuncios_inversion.py  comercio_internacional_merida.py  comercio_internacional_monterrey.py  exportaciones_estatales_queretaro.py  exportaciones_importaciones_monterrey.py  ied_anual_queretaro.py  ied_estados.py  ied_pais.py  ied_sector.py  importaciones_estatales_queretaro.py
deploy_dist/etl/sources/sectur/: __init__.py  derrama_economica_pernocta_merida.py  gasto_promedio_diario_pernocta_merida.py  ocupacion_hotelera_monterrey.py  ocupacion_hotelera_queretaro.py  visitantes_nacionales_extranjeros_monterrey.py
docs/: FUENTES_DE_DATOS.md  analisis_datos_merida.md
etl/: __init__.py  crontab  run.py  run_from_cron.py  run_from_git.py  schema.sql
etl_ui/: README.md  app.py  config.py
frontend/: Dockerfile  package.json  tailwind.config.ts
scripts/: analizar_merida.py  append_observatur.py  (+31 more)
(+218 files in other folders)
