[project]
name = "aedmi-etl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "httpx>=0.27",
    "lxml>=5.2",
    "html5lib>=1.1",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["core", "sources"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
